[package]
name = "pam_tbot_send"
version = "1.1.0"
edition = "2021"
description = "Sends information about logins in system to telegram chat (uses PAM)"

[dependencies]
lib-notify = { git = "https://github.com/eking-go/lib-notify.git", tag = "0.1.0" }
serde_json = "1.0.111"
args = "2.2.0"
getopts = "0.2"
